Fixed #219, speaker session description link invisible

--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -2,6 +2,10 @@
 
 .bg-pink {
   background: var(--pink);
+
+  a {
+    color: var(--white);
+  }
 }
 
 .text-pink {
